testsuite/tests/grammar/invalid_lkt/two_grammars.lkt
grammar foo_grammar1 {}
grammar foo_grammar2 {}
